database/force-app/default/objects/Registration__c/Registration__c.object-meta.xml
<CustomObject>
    <label>Registration</label>
    <nameField>
        <label>Registration Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Registrations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>