database/force-app/default/objects/Registration__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Event (Registration)</relationshipLabel>
    <relationshipName>RegistrationEvent</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>