database/force-app/default/objects/Registration__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Volunteer</label>
    <referenceTo>Volunteer__c</referenceTo>
    <relationshipLabel>Volunteer (Registration)</relationshipLabel>
    <relationshipName>RegistrationVolunteer</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>